--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 html {
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   font-size: 62.5%;
   overflow-x: hidden;
 }
@@ -28,4 +28,111 @@ html {
   justify-content: space-around;
   position: fixed;
   padding-left: 30rem;
+}
+
+.logo {
+  width: 70px;
+  height: auto;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.logo h3 {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.content .list-menu {
+  width: ;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.content .list-menu li a {
+  padding: 3rem 1rem 2rem 1rem;
+  color: white;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  transition: all 200ms ease-in;
+}
+
+.content .list-menu li a:hover {
+  background-color: #3333;
+  border-bottom: 4px solid #ffc506;
+  color: #ffc506;
+}
+
+/* firts section */
+
+.first-section {
+  height: 100vh;
+  background-image: linear-gradient(
+      rgba(29, 29, 29, 0.8),
+      rgba(29, 29, 29, 0.8)
+    ),
+    url(./img/fundopizza.jpg);
+  background-origin: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-y: 60px;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.first-section .conteudo-principal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.first-section h1 {
+  color: #ffc506;
+  font-size: 6rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.first-section h2 {
+  color: rgb(177, 177, 177);
+  font-size: 3rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+}
+
+.btn button {
+  width: 230px;
+  height: 60px;
+  cursor: pointer;
+  text-transform: uppercase;
+  background-color: #ffc506;
+  border-radius: 10px;
+  color: black;
+  font-weight: 700;
+  margin-top: 5rem;
+  transition: all 400ms ease-in;
+}
+
+.btn button:hover {
+  border: 1px solid #ffc506;
+  background-color: transparent;
+  color: #ffc506;
+}
+
+.btn {
+  width: 480px;
+  display: flex;
+  justify-content: space-between;
 }
