--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  outline: none;
   border: none;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
@@ -14,7 +15,9 @@ html {
   width: 100vw;
   height: 100vh;
   font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 /* Menu */
@@ -27,7 +30,7 @@ html {
   height: 70px;
   justify-content: space-around;
   position: fixed;
-  padding-left: 30rem;
+  padding-left: 10rem;
 }
 
 .logo {
@@ -40,7 +43,7 @@ html {
 
 .logo h3 {
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 
 .logo img {
@@ -49,7 +52,7 @@ html {
 }
 
 .content .list-menu {
-  width: ;
+  width: 600px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -58,10 +61,14 @@ html {
 .content .list-menu li a {
   padding: 3rem 1rem 2rem 1rem;
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   text-transform: uppercase;
   font-weight: 500;
   transition: all 200ms ease-in;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .content .list-menu li a:hover {
@@ -82,10 +89,10 @@ html {
   background-origin: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 60px;
+  background-position-y: 50px;
   width: 100vw;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -102,11 +109,13 @@ html {
   font-size: 6rem;
   text-transform: uppercase;
   margin-bottom: 1rem;
+  font-family: "Indie Flower", cursive;
 }
 
 .first-section h2 {
   color: rgb(177, 177, 177);
   font-size: 3rem;
+  font-family: "Indie Flower", cursive;
   font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 3rem;
@@ -135,4 +144,86 @@ html {
   width: 480px;
   display: flex;
   justify-content: space-between;
+}
+
+/* Sobre nós */
+.sobre-nos {
+  background-color: #1f1f1f;
+  width: 100%;
+  padding-bottom: 5rem;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sobre-nos img {
+  width: 400px;
+  height: 400px;
+  margin-top: 10rem;
+  margin-left: 10rem;
+  border: 2px solid rgb(155, 155, 155);
+}
+.main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contentsobre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contentsobre h2 {
+  font-size: 6rem;
+  margin-bottom: 1rem;
+}
+
+.contentsobre p {
+  text-align: center;
+  font-size: 1.8rem;
+  width: 600px;
+}
+
+/* Cardápio */
+
+.cardapio {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(12, 12, 12, 0.8);
+}
+
+.cardapio h2 {
+  font-size: 5rem;
+  color: #e6e6e6;
+  text-transform: uppercase;
+}
+
+.itens-cardapio {
+  width: 80%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 550px));
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.itens-cardapio .info {
+  background-color: rgb(221, 221, 221);
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+}
+
+.itens-cardapio img {
 }
