--- a/style.css
+++ b/style.css
@@ -195,7 +195,14 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(12, 12, 12, 0.8);
+  background-image: linear-gradient(
+      rgba(12, 12, 12, 0.8),
+      rgba(15, 15, 15, 0.8)
+    ),
+    url(/img/cardapio.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .cardapio h2 {
@@ -209,7 +216,7 @@ html {
   margin-top: 2rem;
   margin-bottom: 2rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 550px));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 550px));
   justify-content: center;
   align-items: center;
   gap: 30px;
@@ -225,5 +232,9 @@ html {
   padding: 1.5rem;
 }
 
-.itens-cardapio img {
-}
+.itens-cardapio .info h3 {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  text-decoration: underline;
+}s
